# django-tailwind-template

./: .env.example  .gitignore  LICENSE  README.md  package.json  pyproject.toml  tailwind.config.js
core/: settings.py
templates/: layout.html
