[tool.poetry]
name = "django-tailwind-template"
version = "1.0.0"
package-mode = false
description = ""
authors = ["Óscar Miranda <oscarmiranda3615@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
